# bevy_pathfinding

./: Cargo.toml  README.md
src/: astar.rs  main.rs  world_generation.rs
