[package]
name = "bevy_pathfinding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = true
panic = "abort"

[dependencies]
bevy = "0.8.1"
bevy_flycam = "*"
bevy_transform_gizmo = "*"
bevy_mod_picking = "0.9"